--- a/gradle/generation/kuromoji.gradle
+++ b/gradle/generation/kuromoji.gradle
@@ -62,6 +62,7 @@ configure(project(":lucene:analysis:kuromoji")) {
       src dictionarySource
       dest dictionaryFile
       onlyIfModified true
+      retries 3
 
       doLast {
         // Unpack the downloaded archive.
@@ -111,6 +112,7 @@ configure(project(":lucene:analysis:kuromoji")) {
       src dictionarySource
       dest dictionaryFile
       onlyIfModified true
+      retries 3
 
       doLast {
         // Unpack the downloaded archive.
