--- a/gradle/generation/moman.gradle
+++ b/gradle/generation/moman.gradle
@@ -30,6 +30,7 @@ configure(project(":lucene:core")) {
     src momanSource
     dest momanZip
     onlyIfModified true
+    retries 3
 
     doLast {
       ant.unzip(src: momanZip, dest: momanDir, overwrite: "true") {
