--- a/gradle/generation/nori.gradle
+++ b/gradle/generation/nori.gradle
@@ -62,6 +62,7 @@ configure(project(":lucene:analysis:nori")) {
       src dictionarySource
       dest dictionaryFile
       onlyIfModified true
+      retries 3
 
       doLast {
         // Unpack the downloaded archive.
