--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ plugins {
   id "lucene.help"
 
   id "lucene.validation.spotless-groovy"
+  id "lucene.validation.check-environment"
 
   // perhaps move this to a convention plugin or remove entirely?
   id "lucene.build-infra"
@@ -109,9 +110,6 @@ dependencies {
 // if the build file is incorrectly written and evaluates something
 // eagerly).
 apply from: file('gradle/_to-remove/conventions.gradle')
-
-// Make sure the build environment is consistent.
-apply from: file('gradle/validation/check-environment.gradle')
 
 // Set up defaults and configure aspects for certain modules or functionality
 // (java, tests)
