--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,8 +34,6 @@ jmh = "1.37"
 jts = "1.20.0"
 # unit tests
 junit = "4.13.2"
-# @keep This is Lucene's base version.
-lucene = "11.0.0"
 # @keep Minimum gradle version to run the build
 minGradle = "8.14"
 # @keep This is the minimum required Java version.
@@ -100,6 +98,7 @@ zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
 
 [plugins]
 benmanes-versions = "com.github.ben-manes.versions:0.52.0"
+carrotsearch-buildinfra = "com.carrotsearch.gradle.buildinfra:0.0.10"
 dependencychecks = "com.carrotsearch.gradle.dependencychecks:0.0.9"
 errorprone = "net.ltgt.errorprone:4.2.0"
 forbiddenapis = "de.thetaphi.forbiddenapis:3.9"
