--- a/build-options.properties
+++ b/build-options.properties
@@ -1,6 +1,23 @@
-# These are versioned build options.
-# you can tweak them to your needs by creating a build-options.local.properties
-# and overriding what's needed there.
+#
+# These are various build options that the Lucene build uses.
+# 
+# Values of these options are read (and can be overriden) from:
+#
+#   - cli parameters to gradlew (system properties): -DoptionKey=value
+#   - cli parameters to gradlew (gradle properties): -PoptionKey=value
+#   - env variables: optionKey=value ./gradlew ...
+#   - non-versioned build-options.local.properties
+#   - versioned defaults in build-options.properties file (this file)
+#
 
-# Base Lucene version
+# This is the base Lucene version.
 version.base=11.0.0
+
+# This is the "suffix" added to version.base to form the final version.
+version.suffix=SNAPSHOT
+
+# This property is computed as ${version.base}-${version.suffix}; you
+# can override it manually to any x.y.z string to set an arbitrary 
+# Lucene version.
+# version.release=
+
