--- a/build-tools/build-infra/src/main/groovy/lucene.rootproject.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.rootproject.setup.gradle
@@ -15,7 +15,7 @@
  * limitations under the License.
  */
 
-import com.carrotsearch.gradle.buildinfra.buildoptions.*
+import com.carrotsearch.gradle.buildinfra.buildoptions.BuildOptionsPlugin
 
 // Prepare the root project and some global infrastructure.
 
