--- a/build-tools/build-infra/src/main/groovy/lucene.rootproject.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.rootproject.setup.gradle
@@ -58,6 +58,14 @@ ext {
     }
     return m[0][1]
   }()
+  // "majorVersion" is an integer with just the major version. Compute it.
+  majorVersion = {
+    def m = (version =~ /^(\d+)\.\d+\.\d+(-(.+))?/)
+    if (!m) {
+      throw new GradleException("Can't strip version to just major version: " + rootProject.version)
+    }
+    return m[0][1] as int
+  }()
 
   // snapshot build marker used in scripts.
   snapshotBuild = luceneVersion.contains("SNAPSHOT")
