--- a/build-tools/build-infra/src/main/groovy/lucene.root-project.conventions.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.root-project.conventions.gradle
@@ -16,6 +16,7 @@
  */
 
 import com.carrotsearch.gradle.buildinfra.buildoptions.BuildOptionsPlugin
+import com.carrotsearch.gradle.buildinfra.environment.GitInfoPlugin
 
 // Prepare the root project and some global infrastructure.
 
@@ -26,6 +27,7 @@ if (project != project.rootProject) {
 //
 // Register these plugins early.
 //
+plugins.apply(GitInfoPlugin)
 allprojects {
   plugins.apply(BuildOptionsPlugin)
 }
