--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ import java.time.format.DateTimeFormatter
 
 plugins {
   // Apply convention plugins from the composite build-infra project.
-  // The order of plugins will typically matter.
+  // The order of plugins does matter (most of the time).
   id "lucene.root-project.check-environment"
   id "lucene.root-project.conventions"
   id "lucene.all-projects.conventions"
